# triton_cli

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  mock_cli.proc.py  pyproject.toml  set.py
.github/workflows/: codeql.yml  python-package.yaml  trigger_ci.yml
examples/: config-falcon-7b.yaml  config-opt125m.yaml  config-phi-2.yaml  config-phi-3-mini-4k-instruct.yaml  schema.json
examples/settings-falcon-7b/: vllm.yaml
examples/settings-gpt2/: trtllm.yaml  vllm.yaml
examples/settings-llama-2-7b/: trtllm.yaml  vllm.yaml
examples/settings-llama-2-7b-chat/: trtllm.yaml  vllm.yaml
examples/settings-llama-3-8b/: trtllm.yaml  vllm.yaml
examples/settings-llama-3-8b-instruct/: trtllm.yaml  vllm.yaml
examples/settings-mistral-7b/: trtllm.yaml  vllm.yaml
examples/settings-opt125m/: trtllm.yaml  vllm.yaml
examples/settings-phi-2/: trtllm.yaml  vllm.yaml
examples/tensorrtllm/: config-gpt2.yaml  config-llama-2-7b-chat.yaml  config-llama-2-7b.yaml  config-llama-3-8b.yaml  config-mistral-7b.yaml
src/triton/: cli.py
src/triton_cli/: .gitignore  __init__.py  cli.py  client.py  common.py  config.yaml  constants.py  json_parser.py  logger.py  main.py  metrics.py  parser.py  profile.py  profiler.py  repository.py
src/triton_cli/client/: client.py
src/triton_cli/docker/: Dockerfile  test.py
src/triton_cli/engine_builders/: gpt2_builder.py
src/triton_cli/repository/: llmapi_repository_helper.py  model_repository.py  repository_helper.py  trtllm_repository_helper.py  vllm_repository_helper.py
src/triton_cli/repository/model_source/: ngc.py
src/triton_cli/server/: __init__.py  server.py  server_config.py  server_docker.py  server_factory.py  server_local.py  server_utils.py
src/triton_cli/templates/llmapi/: config.pbtxt
src/triton_cli/templates/llmapi/1/: model.json  model.py
src/triton_cli/templates/trt_llm/ensemble/: config.pbtxt
src/triton_cli/templates/trt_llm/postprocessing/: config.pbtxt
src/triton_cli/templates/trt_llm/postprocessing/1/: model.py
src/triton_cli/templates/trt_llm/preprocessing/: config.pbtxt
src/triton_cli/templates/trt_llm/preprocessing/1/: model.py
src/triton_cli/templates/trt_llm/tensorrt_llm/: config.pbtxt
src/triton_cli/templates/trt_llm/tensorrt_llm_bls/: config.pbtxt
src/triton_cli/templates/trt_llm/tensorrt_llm_bls/1/: model.py
src/triton_cli/templates/trt_llm/tensorrt_llm_bls/1/lib/: decode.py  triton_decoder.py
src/triton_cli/templates/trtllm/tensorrt_llm/: config.pbtxt
src/triton_cli/trt_llm/: builder.py  engine_config_parser.py  engine_generation_script.py  gpt2_builder.py  json_parser.py
src/triton_cli/trt_llm/builders/gpt2/: builder.py
src/triton_cli/trt_llm/builders/gpt2/scripts/: build.py  hf_gpt_convert.py  merge_ptuning_tables.py  nemo_ckpt_convert.py  nemo_lora_convert.py  nemo_prompt_convert.py  run_hf.py  smoothquant.py  visualize.py  weight.py
src/triton_cli/trt_llm/builders/gpt2/scripts/utils/: convert.py  nemo.py
src/triton_cli/trt_llm/builders/llama2/: builder.py
src/triton_cli/trt_llm/builders/llama2/scripts/: build.py  convert.py  hf_llama_convert.py  quantize.py  smoothquant.py  summarize_long.py  weight.py
src/triton_cli/trt_llm/checkpoint_scripts/gpt2/: convert_checkpoint.py
src/triton_cli/trt_llm/checkpoint_scripts/llama/: convert_checkpoint.py
src/triton_cli/trt_llm/checkpoint_scripts/opt/: convert_checkpoint.py
templates/trtllm/postprocessing/: config.pbtxt
templates/trtllm/preprocessing/1/: model.py
templates/trtllm/tensorrt_llm/: config.pbtxt
templates/trtllm/tensorrt_llm_bls/: config.pbtxt
tests/: compatibility-requirements.txt  conftest.py  test_cli.py  test_cli_new.py  test_e2e.py  test_example.py  test_library.py  test_model_repository.py  trtllm-requirements.txt  utils.py
tests/test_configs/: config-gpt2-trtllm.yaml  config-gpt2-vllm.yaml
tests/test_models/add_sub/: config.pbtxt
tests/test_models/add_sub/1/: model.py
tests/test_models/mock_llm/: config.pbtxt
tests/test_models/mock_llm/1/: model.py
tests/test_settings/settings-gpt2/: trtllm.yaml  vllm.yaml
